--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ margin: 10px auto;
 
 <div id="introduction" class="card-white">
 <h1>Hola, soy Karina!</h1>
-<img class="img-circle" src="C:\Users\kasam\OneDrive\Escritorio\index.html\images\perfil.jpg" alt="My Pic">
+<img class="img-circle" src="C:\Users\kasam\OneDrive\Escritorio\index.html\sitio\images\perfil.jpg" alt="My Pic">
 
 <p>Me gusta inventar, buscar, encontrar... y disfrazarme de lobo.</p>
 
